[package]
name = "hello-rust"
version = "0.1.0"
authors = ["jim <303600370@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
